add_library(exact_strategy propagation comparison pooling cnn_node cnn_edge cnn_genome exact)

add_executable(propagation_test propagation)
target_link_libraries(propagation_test exact_common)
target_compile_definitions(propagation_test PUBLIC -DPROPAGATE_TEST)

add_executable(pooling_test pooling)
target_link_libraries(pooling_test exact_common)
target_compile_definitions(pooling_test PUBLIC -DPOOL_TEST)

